--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,26 @@
-name: absensi_app
-description: "A new Flutter project."
+name: employment_attendance
+description: A company employment attendance application.
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
   sdk: ^3.6.1
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.7.2
+  cupertino_icons: ^1.0.6
+  google_fonts: ^6.1.0
+  provider: ^6.1.2
+  intl: ^0.19.0
+  dio: ^5.4.0
+  go_router: ^14.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
