--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
   provider: ^6.1.2
   intl: ^0.19.0
   dio: ^5.4.0
-  go_router: ^14.1.0
   get: ^4.6.6
+  camera: ^0.11.0 
+  geolocator: ^12.0.0
+
 
 dev_dependencies:
   flutter_test:
