--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   camera: ^0.11.0 
   geolocator: ^12.0.0
   image_picker: ^1.0.7
+  geocoding: ^3.0.0
+  fluttertoast: ^8.2.2
 
 
 dev_dependencies:
