--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,14 @@ dependencies:
   google_fonts: ^6.1.0
   provider: ^6.1.2
   intl: ^0.19.0
-  dio: ^5.4.0
+  dio: ^5.9.0
   get: ^4.6.6
   camera: ^0.11.0 
   geolocator: ^12.0.0
   image_picker: ^1.0.7
   geocoding: ^3.0.0
   fluttertoast: ^8.2.2
+  file_picker: ^10.3.2
 
 
 dev_dependencies:
