--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,23 +15,30 @@ dependencies:
   provider: ^6.1.2
   intl: ^0.19.0
   dio: ^5.9.0
+  get_storage: ^2.1.1
   get: ^4.6.6
+  shared_preferences: ^2.2.3 
   camera: ^0.11.0 
   geolocator: ^12.0.0
   image_picker: ^1.0.7
   geocoding: ^3.0.0
   fluttertoast: ^8.2.2
   file_picker: ^10.3.2
+  flutter_dotenv: ^6.0.0
+  flutter_secure_storage: ^9.2.4
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  
 
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/image/logo.png
     - assets/image/profile.png
     - assets/image/task.png
