--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   file_picker: ^10.3.2
   flutter_dotenv: ^6.0.0
   flutter_secure_storage: ^9.2.4
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
 
 
 
