--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: employment_attendance
 description: A company employment attendance application.
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -16,8 +16,8 @@ dependencies:
   dio: ^5.9.0
   get_storage: ^2.1.1
   get: ^4.6.6
-  shared_preferences: ^2.2.3 
-  camera: ^0.11.0 
+  shared_preferences: ^2.2.3
+  camera: ^0.11.0
   geolocator: ^12.0.0
   image_picker: ^1.0.7
   geocoding: ^3.0.0
@@ -25,16 +25,11 @@ dependencies:
   file_picker: ^10.3.2
   flutter_dotenv: ^6.0.0
   flutter_secure_storage: ^9.2.4
-  cookie_jar: ^4.0.8
-  dio_cookie_manager: ^3.1.1
-
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  
 
 flutter:
   uses-material-design: true
