--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   get_storage: ^2.1.1
   get: ^4.6.6
   shared_preferences: ^2.2.3
-  camera: ^0.11.0
+  camera: ^0.11.2+1
   geolocator: ^12.0.0
   image_picker: ^1.0.7
   geocoding: ^3.0.0
